<resources>
    <string name="app_name">HelloFrog</string>
    <string name="app_header">Hello Frog!</string>
    <string name="hello_frog"></string>
    <string name="hello_toad"></string>
    <string name="label_name">Name</string>
    <string name="label_species">Species</string>
    <string name="submit_button">Submit</string>
    <string name="add_favourtie_button">Add To Favourites</string>

    <string name="activity_details">Amphibian Details</string>
</resources>
