<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
             >
    <TextView
        android:textColor="#e7e0e0"
        android:id="@+id/text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_frog"/>

    <TextView
        android:textColor="#e7e0e0"
        android:id="@+id/text_species"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hello_toad"/>

    <EditText
    android:id="@+id/name_input"
    android:layout_width="220dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="20dp"
    android:layout_marginLeft="20dp"
    android:hint="@string/label_name"/>

    <EditText
        android:id="@+id/species_input"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/label_species"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/submit_button"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="250dp"
        android:text="@string/submit_button"/>


    <ListView
        android:id="@+id/amphibian_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"/>

</LinearLayout>